--- a/waybar/config
+++ b/waybar/config
@@ -2,7 +2,7 @@
 "fixed-center": false,
 "height": 40,
 "position":"top",
-"modules-left": ["sway/workspaces", "sway/mode"],
+"modules-left": ["sway/workspaces", "mpd", "sway/mode"],
 "modules-right": [
                   "cpu", 
                   "memory", 
@@ -136,6 +136,34 @@
   	"tooltip-format": "{}",
     "on-click": "blueman-manager",
     "on-click-right": "$HOME/.config/scripts/toggle-bluetooth"
-  }
+},
+
+"mpd": {
+        "format": "{stateIcon}  {artist} - {title} ({elapsedTime:%M:%S}/{totalTime:%M:%S})",
+        //"format": "{stateIcon} {consumeIcon}",
+        "format-disconnected": "Disconnected",
+        "format-stopped": "{consumeIcon}{randomIcon}{repeatIcon}{singleIcon}Stopped ",
+        "unknown-tag": "N/A",
+        "interval": 2,
+        "consume-icons": {
+            "on": " "
+        },
+        "random-icons": {
+            "off": "<span color=\"#f53c3c\"></span> ",
+            "on": " "
+        },
+        "repeat-icons": {
+            "on": " "
+        },
+        "single-icons": {
+            "on": "1 "
+        },
+        "state-icons": {
+            "paused": "",
+            "playing": ""
+        },
+        "tooltip-format": "MPD (connected)",
+        "tooltip-format-disconnected": "MPD (disconnected)"
+},
 
 }
