--- a/sway/config
+++ b/sway/config
@@ -1,6 +1,6 @@
 # Variables
 
-set $term alacritty
+set $term foot
 
 set $menu bemenu-run -p "Search" -H "40px" --fn "Iosevka Nerd Font 16" --hf="#8DA3B9" --hb="#242424" --nb="#242424" --nf="#d2d2d2" --tb="#242424" --tf="#8DA3B9" --fb="#242424" --ff="#d2d2d2"
 
@@ -26,11 +26,28 @@ input "1267:12596:ASUE140A:00_04F3:3134_Touchpad" {
 
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
-	output * bg /home/paolo/wallpapers/moon.png fill
+	output * bg /home/paolo/wallpapers/dark.png fill
 
-	output DP-3 resolution 1366x768
+	output eDP-1 {
+    mode 1920x1080@60Hz
+  }
+	
+  output HDMI-A-1 {
+    mode 1920x1080@75Hz
+  }
 
-	workspace 10 output DP-3
+  output DP-3 {
+    mode 1366x768@60Hz
+  }
+
+  workspace 10 output DP-3
+
+  #output eDP-1 {
+      #background ~/Pictures/bestFriend-wallpaper-07-1920x1200.png fill
+      #resolution 1920x1080
+	    #scale 1.4
+      #}
+
 
 # Keybinds
 
@@ -149,81 +166,97 @@ input "1267:12596:ASUE140A:00_04F3:3134_Touchpad" {
 # Sway has a "scratchpad", which is a bag of holding for windows.
 # You can send windows there and get them back later.
 # Move the currently focused window to the scratchpad
-    	bindsym $mod+Shift+minus move scratchpad
+    bindsym $mod+Shift+minus move scratchpad
 
 # Show the next scratchpad window or hide the focused scratchpad window.
 # If there are multiple scratchpad windows, this command cycles through them.
-    	bindsym $mod+minus scratchpad show
+    bindsym $mod+minus scratchpad show
 
 # Others
-	bindsym --locked XF86AudioRaiseVolume exec /home/paolo/.config/scripts/volume+
-        bindsym --locked XF86AudioLowerVolume exec /home/paolo/.config/scripts/volume-
-        bindsym --locked XF86AudioMute exec /home/paolo/.config/scripts/toggle-mute
+	  bindsym --locked XF86AudioRaiseVolume exec /home/paolo/.config/scripts/volume+
+    bindsym --locked XF86AudioLowerVolume exec /home/paolo/.config/scripts/volume-
+    bindsym --locked XF86AudioMute exec /home/paolo/.config/scripts/toggle-mute
 
-        bindsym XF86MonBrightnessDown exec brightnessctl set 5%-
-        bindsym XF86MonBrightnessUp exec brightnessctl set +5%
-
-        bindsym --locked XF86AudioPlay exec playerctl play-pause
-        bindsym --locked XF86AudioNext exec playerctl next
-        bindsym --locked XF86AudioPrev exec playerctl previous
-
-        bindsym Alt+l exec swaylock
+    # Brightness Control
+    bindsym XF86MonBrightnessDown exec brightnessctl set 5%-
+    bindsym XF86MonBrightnessUp exec brightnessctl set +5%
         
-        # Print Entire Screen
-        bindsym Print exec wayshot -f $HOME/Pictures/capture-$(date +%Y-%m-%d_%H-%m-%s).png
+    # https://github.com/haikarainen/light
+    # bindsym XF86MonBrightnessUp exec light -A 5    # increase screen brightness
+    # bindsym XF86MonBrightnessDown exec light -U 5  # decrease screen brightness
 
-	      # Print Region
-        bindsym alt+Print exec wayshot -s "$(slurp -f '%x %y %w %h')" -f $HOME/Pictures/capture-$(date +%Y-%m-%d_%H-%m-%s).png
+    # Multimedia Keys
+    bindsym XF86AudioPlay  exec "mpc toggle"
+    bindsym XF86AudioStop  exec "mpc stop"
+    bindsym XF86AudioNext  exec "mpc next"
+    bindsym XF86AudioPrev  exec "mpc prev"
+    bindsym XF86AudioPause exec "mpc pause"
+        
+    # bindsym --locked XF86AudioPlay exec playerctl play-pause
+    # bindsym --locked XF86AudioNext exec playerctl next
+    # bindsym --locked XF86AudioPrev exec playerctl previous
 
-        # Copy to Clipboard
-        bindsym shift+Print exec wayshot --stdout | wl-copy
+    bindsym Alt+l exec swaylock
+        
+    # Print Entire Screen
+    bindsym Print exec wayshot -f $HOME/Pictures/capture-$(date +%Y-%m-%d_%H-%m-%s).png
 
-        bindsym alt+f exec nautilus
-	      bindsym alt+b exec librewolf
+	  # Print Region
+    bindsym alt+Print exec wayshot -s "$(slurp -f '%x %y %w %h')" -f $HOME/Pictures/capture-$(date +%Y-%m-%d_%H-%m-%s).png
+
+    # Copy to Clipboard
+    bindsym shift+Print exec wayshot --stdout | wl-copy
+
+    # Launch Applications
+    bindsym alt+f exec nautilus
+	  bindsym alt+b exec librewolf
+    bindsym alt+m exec alacritty -e ncmpcpp
 
 # Cursor theme
-seat seat0 xcursor_theme volantes_light_cursors 19
+    seat seat0 xcursor_theme volantes_light_cursors 19
 
 # Disable laptop's display when closed
-bindswitch lid:on output eDP-1 disable
-bindswitch lid:off output eDP-1 enable
+    bindswitch lid:on output eDP-1 disable
+    bindswitch lid:off output eDP-1 enable
 
 # Wayland default floats
-for_window [app_id="(pavucontrol)"] floating enable
+    for_window [app_id="(pavucontrol)"] floating enable
 
 # Idle
-  	 exec swayidle -w \
-         timeout 900 'swaylock -f' \
-         timeout 900 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
-         before-sleep 'swaylock -f'
+  	exec swayidle -w \
+        timeout 900 'swaylock -f' \
+        timeout 900 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
+        before-sleep 'swaylock -f'
 # This will lock your screen after 900 seconds of inactivity, then turn off
 # your displays after another 900 seconds, and turn your screens back on when
 # resumed. It will also lock your screen before your computer goes to sleep.
 
 # Autostart
-exec mako
-exec nm-applet --indicator
-exec blueman-applet
-xwayland enable
+    exec mako
+    exec nm-applet --indicator
+    exec blueman-applet
+    exec --no-startup-id mpd
+    xwayland enable
+
 # Gaps
-gaps outer 1
-gaps inner 1
+    gaps outer 1
+    gaps inner 1
 
 # Titlebars
-font pango:Iosevka Nerd Font Regular 14
-default_border pixel 0
-set $bg #242424
-set $bod_f #8AA6A2
-set $bod_u #242424
-set $text #d2d2d2
-client.focused   $bod_f $bg $text $bod_f $bod_f
-client.unfocused $bod_u $bg $text $bod_u $bod_u
-client.focused_inactive $bod_u $bg $text $bod_u $bod_u
+    font pango:Iosevka Nerd Font Regular 14
+    default_border pixel 2
+    set $bg #242424
+    set $bod_f #606060
+    set $bod_u #303030
+    set $text #d2d2d2
+    client.focused   $bod_f $bg $text $bod_f $bod_f
+    client.unfocused $bod_u $bg $text $bod_u $bod_u
+    client.focused_inactive $bod_u $bg $text $bod_u $bod_u
 
 # Status Bar:
 # Read `man 5 sway-bar` for more information about this section.
-bar {
-    swaybar_command waybar
-}
+    bar {
+        swaybar_command waybar
+    }
 
 include /etc/sway/config.d/*
