update foot configs

--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -1,6 +1,6 @@
 # -*- conf -*-
 
-# shell=$SHELL (if set, otherwise user's default shell from /etc/passwd)
+shell=/usr/bin/zsh
 # term=foot (or xterm-256color if built with -Dterminfo=disabled)
 # login-shell=no
 
@@ -8,7 +8,7 @@
 # title=foot
 # locked-title=no
 
-font=Iosevka Nerd Font:size=18
+font=Iosevka Nerd Font:size=14
 # font-bold=<bold variant of regular font>
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
@@ -64,7 +64,7 @@ notify=notify-send -a ${app-id} -i ${app-id} ${title} ${body}
 # alternate-scroll-mode=yes
 
 [colors]
-# alpha=1.0
+alpha=1.0
 foreground=E8E3E3
 background=242424
 
