update waybar config and style

--- a/waybar/config
+++ b/waybar/config
@@ -10,10 +10,10 @@
                   "temperature", 
                   "pulseaudio", 
                   "backlight", 
+                  "battery", 
                   "network", 
                   "clock", 
                   //"bluetooth", 
-                  "battery", 
                   "idle_inhibitor", 
                   //"custom/power", 
                   "tray"
@@ -21,17 +21,18 @@
 
 "sway/workspaces": {
 "all-outputs": true,
-"format": "{name}",
+"format": "{icon}",
 "format-icons": {
-	"1": "1",
-	"2": "2",
-	"3": "3",
-	"4": "4",
-	"5": "5",
-	"6": "6",
-	"urgent": "  ",
-	"focused": "  ",
-	"default": "  "
+	"1": "󾠮",
+	"2": "󾠯",
+	"3": "󾠰",
+	"4": "󾠱",
+	"5": "󾠲",
+	"6": "󾠳",
+	"7": "󾠴",
+	"8": "󾠵",
+	"9": "󾠶",
+	"10": "󾠷",
 	},
 },
 
@@ -45,14 +46,14 @@
 },
 
 "clock": {
-	"format": "󰥔 {:%H:%M}",
+	"format": "⏱ {:%H:%M}",
 	"tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
 	"format-alt": "{:%Y-%m-%d}",
 },
 
 "backlight": {
         "format": "{icon} {percent}%",
-	"format-icons": ["󰃠"]
+	"format-icons": ["🌞"]
 },
 
 "battery": {
@@ -61,14 +62,14 @@
 		"warning": 30,
 		"critical": 15
 },
-	"format": "{icon}",
+	"format": "{icon} {capacity}%",
 	"format-charging": "{icon} Charging",
-	"format-icons": ["󰁺", "󰁼", "󰁾", "󰂀", "󰂂", "󰁹"],
+	"format-icons": ["🔋"],
 	"tooltip-format": "Battery at {capacity}%"
 },
 
 "network": {
-	"format-wifi": "󰖩 Connected",
+	"format-wifi": "📶 Connected",
         "format-ethernet": "{ipaddr}/{cidr}  ",
        // "tooltip-format": "{ifname} via {gwaddr}  ",
         "tooltip-format": " Connected to {essid}",
@@ -82,7 +83,7 @@
        // "format": "{icon} {volume}%   {source_volume}%",
         "format-muted": "󰖁 MUTED",
         "format-icons": {
-            "default": ["󰕾"]
+            "default": ["🔊"]
 			},
 	"scroll-step": 5,
 	"on-click": "pavucontrol"
@@ -90,7 +91,7 @@
 
 "cpu": {
     "interval": 10,
-    "format": "󰍛 {usage}%",
+    "format": "🧠 {usage}%",
     "max-length": 10
 },
 
@@ -99,12 +100,12 @@
     // "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
     // "critical-threshold": 80,
     // "format-critical": "{temperatureC}°C ",
-    "format": "󰔐 {temperatureC}°C"
+    "format": "🔥 {temperatureC}°C"
 },
 
 "memory": {
     "interval": 30,
-    "format": "  {used:0.1f} GB",
+    "format": "💻 {used:0.1f} GB",
     "max-length": 15
 },
 
@@ -114,15 +115,15 @@
 
 "disk": {
     "interval": 30,
-    "format": "󰉋 {percentage_used}%",
+    "format": "📂 {percentage_used}%",
     "path": "/"
 },
 
 "idle_inhibitor": {
     "format": "{icon}",
     "format-icons": {
-        "activated": " ",
-        "deactivated": " "
+        "activated": "😀",
+        "deactivated": "😴"
     }
 },
 
@@ -159,8 +160,8 @@
             "on": "1 "
         },
         "state-icons": {
-            "paused": "",
-            "playing": ""
+            "paused": "⏯",
+            "playing": "⏸"
         },
         "tooltip-format": "MPD (connected)",
         "tooltip-format-disconnected": "MPD (disconnected)"
