--- a/waybar/config
+++ b/waybar/config
@@ -37,7 +37,7 @@
 },
 
 "sway/mode": {
-	"format": "<span style=\"italic\">{}</span>"
+	"format": "<span style=\"italic\">🚩 {}</span>"
 },
 
 "tray": {
@@ -48,11 +48,11 @@
 "clock": {
 	"format": "⏱ {:%H:%M}",
 	"tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-	"format-alt": "{:%Y-%m-%d}",
+	"format-alt": "🗓 {:%Y-%m-%d}",
 },
 
 "backlight": {
-        "format": "{icon} {percent}%",
+  "format": "{icon} {percent}%",
 	"format-icons": ["🌞"]
 },
 
@@ -70,60 +70,54 @@
 
 "network": {
 	"format-wifi": "📶 Connected",
-        "format-ethernet": "{ipaddr}/{cidr}  ",
-       // "tooltip-format": "{ifname} via {gwaddr}  ",
-        "tooltip-format": " Connected to {essid}",
-        "format-linked": "{ifname} (No IP)  ",
-        "format-disconnected": "󰖪 Disconnected",
+  "format-ethernet": "{ipaddr}/{cidr}  ",
+  "tooltip-format": " Connected to {essid}",
+  "format-linked": "{ifname} (No IP)  ",
+  "format-disconnected": "󰖪 Disconnected",
 	"on-click": "alacritty -e nmtui"
 },
 
 "pulseaudio": {
-        "format": "{icon} {volume}%",
-       // "format": "{icon} {volume}%   {source_volume}%",
-        "format-muted": "󰖁 MUTED",
-        "format-icons": {
-            "default": ["🔊"]
+  "format": "{icon} {volume}%",
+  "format-muted": "<span foreground='#DE2F2E'>🔇 MUTED</span>",
+  "format-icons": {
+    "default": ["🔊"]
 			},
 	"scroll-step": 5,
 	"on-click": "pavucontrol"
 },
 
 "cpu": {
-    "interval": 10,
-    "format": "🧠 {usage}%",
-    "max-length": 10
+  "interval": 10,
+  "format": "🧠 {usage}%",
+  "max-length": 10
 },
 
  "temperature": {
-    // "thermal-zone": 2,
-    // "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
-    // "critical-threshold": 80,
-    // "format-critical": "{temperatureC}°C ",
+  // "thermal-zone": 2,
+  // "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
+  // "critical-threshold": 80,
+  // "format-critical": "{temperatureC}°C ",
     "format": "🔥 {temperatureC}°C"
 },
 
 "memory": {
-    "interval": 30,
-    "format": "💻 {used:0.1f} GB",
-    "max-length": 15
-},
-
-"custom/power": {
-		"format": "󰐥",
+  "interval": 10,
+  "format": "💻 {used:0.1f} GB",
+  "max-length": 15
 },
 
 "disk": {
-    "interval": 30,
-    "format": "📂 {percentage_used}%",
-    "path": "/"
+  "interval": 30,
+  "format": "📂 {percentage_used}%",
+  "path": "/"
 },
 
 "idle_inhibitor": {
-    "format": "{icon}",
-    "format-icons": {
-        "activated": "😀",
-        "deactivated": "😴"
+  "format": "{icon}",
+  "format-icons": {
+    "activated": "😀",
+    "deactivated": "😴"
     }
 },
 
@@ -140,25 +134,11 @@
 },
 
 "mpd": {
-        "format": "{stateIcon}  {artist} - {title} ({elapsedTime:%M:%S}/{totalTime:%M:%S})",
+        "format": "{stateIcon} {title} ({elapsedTime:%M:%S}/{totalTime:%M:%S})",
+        //"format": "{stateIcon}  {artist} - {title} ({elapsedTime:%M:%S}/{totalTime:%M:%S})",
         //"format": "{stateIcon} {consumeIcon}",
-        "format-disconnected": "Disconnected",
-        "format-stopped": "{consumeIcon}{randomIcon}{repeatIcon}{singleIcon}Stopped ",
-        "unknown-tag": "N/A",
+        "format-disconnected": "<span foreground='#DE2F2E'>🚫 Disconnected</span>",
         "interval": 2,
-        "consume-icons": {
-            "on": " "
-        },
-        "random-icons": {
-            "off": "<span color=\"#f53c3c\"></span> ",
-            "on": " "
-        },
-        "repeat-icons": {
-            "on": " "
-        },
-        "single-icons": {
-            "on": "1 "
-        },
         "state-icons": {
             "paused": "⏯",
             "playing": "⏸"
