--- a/sway/config
+++ b/sway/config
@@ -2,7 +2,7 @@
 
 set $term foot
 
-set $menu bemenu-run -b -p "Search" -H "40px" --fn "Iosevka Nerd Font 16" --hf="#8DA3B9" --hb="#242424" --nb="#242424" --nf="#d2d2d2" --tb="#242424" --tf="#8DA3B9" --fb="#242424" --ff="#d2d2d3"
+set $menu bemenu-run -p "Search" -H "40px" --fn "Iosevka Nerd Font 16" --hf="#8DA3B9" --hb="#242424" --nb="#242424" --nf="#d2d2d2" --tb="#242424" --tf="#8DA3B9" --fb="#242424" --ff="#d2d2d3"
 
 # Home row direction keys, like vim
 set $left h
@@ -247,7 +247,7 @@ input "1267:12596:ASUE140A:00_04F3:3134_Touchpad" {
 
 # Titlebars
     font pango:Iosevka Nerd Font Regular 14
-    default_border pixel 0
+    default_border pixel 2
     set $bg #242424
     set $bod_f #606060
     set $bod_u #303030
