make some changes

--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -66,27 +66,27 @@ notify=notify-send -a ${app-id} -i ${app-id} ${title} ${body}
 [colors]
 alpha=1.0
 foreground=E8E3E3
-background=242424
+background=151515
 
 # Normal/regular colors (color palette 0-7)
 regular0=151515  # black
-regular1=B66467  # red
-regular2=8C977D  # green
-regular3=D9BC8C  # yellow
-regular4=8DA3B9  # blue
-regular5=A988B0  # magenta
-regular6=8AA6A2  # cyan
-regular7=E8E3E3  # white
+regular1=AC4142  # red
+regular2=90A959  # green
+regular3=f4bf75  # yellow
+regular4=6a9fb5  # blue
+regular5=aa759f  # magenta
+regular6=75b5aa  # cyan
+regular7=d0d0d0  # white
 
 # Bright colors (color palette 8-15)
 bright0=353535   # bright black
-bright1=B66467   # bright red
-bright2=8C977D   # bright green
-bright3=D9BC8C   # bright yellow
-bright4=8DA3B9   # bright blue
-bright5=A988B0   # bright magenta
-bright6=8AA6A2   # bright cyan
-bright7=E8E3E3   # bright white
+bright1=ac4142   # bright red
+bright2=90a959   # bright green
+bright3=f4bf75   # bright yellow
+bright4=6a9fb5   # bright blue
+bright5=aa759f   # bright magenta
+bright6=75b5aa   # bright cyan
+bright7=d0d0d0   # bright white
 
 ## dimmed colors (see foot.ini(5) man page)
 # dim0=<not set>
