--- a/ranger/rifle.conf
+++ b/ranger/rifle.conf
@@ -1,4 +1,4 @@
-# vim: ft=cfg
+lvim: ft=cfg
 #
 # This is the configuration file of "rifle", ranger's file executor/opener.
 # Each line consists of conditions and a command.  For each line the conditions
@@ -129,7 +129,6 @@ mime ^video,       has mplayer,  X, flag f = mplayer -fs -- "$@"
 mime ^video|audio, has vlc,      X, flag f = vlc -- "$@"
 mime ^video|audio, has totem,    X, flag f = totem -- "$@"
 mime ^video|audio, has totem,    X, flag f = totem --fullscreen -- "$@"
-mime ^video|audio, has parole,   X, flag f = parole -- "$@"
 
 #--------------------------------------------
 # Video without X
