--- a/waybar/config
+++ b/waybar/config
@@ -13,10 +13,9 @@
                   "battery", 
                   "network", 
                   //"bluetooth", 
-                  "sway/language", 
                   "clock", 
+                  "sway/language", 
                   "idle_inhibitor", 
-                  //"custom/power", 
                   "tray"
                 ],
 
@@ -54,7 +53,9 @@
 
 "backlight": {
   "format": "{icon} {percent}%",
-	"format-icons": ["🌞"]
+	"format-icons": ["🌞"],
+  "on-scroll-down": "brightnessctl set 5%-",
+  "on-scroll-up": "brightnessctl set +5%"
 },
 
 "battery": {
@@ -64,17 +65,17 @@
 		"critical": 15
 },
 	"format": "{icon} {capacity}%",
-	"format-charging": "{icon} Charging",
+	"format-charging": "{icon} {capacity}% Charging",
 	"format-icons": ["🔋"],
-	"tooltip-format": "Battery at {capacity}%"
+	"tooltip-format": "Battery at {capacity}%",
 },
 
 "network": {
-	"format-wifi": "📶 Connected",
+	"format-wifi": "📶 {signalStrength}%",
   "format-ethernet": "{ipaddr}/{cidr}  ",
   "tooltip-format": " Connected to {essid}",
   "format-linked": "{ifname} (No IP)  ",
-  "format-disconnected": "󰖪 Disconnected",
+  "format-disconnected": "📶 Disconnected",
 	"on-click": "alacritty -e nmtui"
 },
 
@@ -104,7 +105,8 @@
 
 "memory": {
   "interval": 10,
-  "format": "💻 {used:0.1f} GB",
+  //"format": "💻 {used:0.1f} GB",
+  "format": "💻 {}%",
   "max-length": 15
 },
 
@@ -148,7 +150,8 @@
 },
 
 "sway/language": {
-    "format": "{flag} {long}",
+    "format": "{flag}",
+    "tooltip-format": "{long}"
 },
 
 }
