--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,29 +1,29 @@
 colors:
   # Default colors
   primary:
-    background: '#242424'
+    background: '#151515'
     foreground: '#E8E3E3'
 
   # Normal colors
   normal:
     black:   '#151515'
-    red:     '#B66467'
-    green:   '#8C977D'
-    yellow:  '#D9BC8C'
-    blue:    '#8DA3B9'
-    magenta: '#A988B0'
-    cyan:    '#8AA6A2'
+    red:     '#AC4142'
+    green:   '#90A959'
+    yellow:  '#F4BF75'
+    blue:    '#6A9FB5'
+    magenta: '#AA759F'
+    cyan:    '#75B5AA'
     white:   '#E8E3E3'
 
   # Bright colors
   bright:
-    black:   '#353535'
-    red:     '#B66467'
-    green:   '#8C977D'
-    yellow:  '#D9BC8C'
-    blue:    '#8DA3B9'
-    magenta: '#A988B0'
-    cyan:    '#8AA6A2'
+    black:   '#151515'
+    red:     '#AC4142'
+    green:   '#90A959'
+    yellow:  '#F4BF75'
+    blue:    '#6A9FB5'
+    magenta: '#AA759F'
+    cyan:    '#75B5AA'
     white:   '#E8E3E3'
 
 window:
