--- a/waybar/config
+++ b/waybar/config
@@ -53,7 +53,7 @@
 
 "backlight": {
   "format": "{icon} {percent}%",
-	"format-icons": ["🌞"],
+	"format-icons": ["🔆"],
   "on-scroll-down": "brightnessctl set 5%-",
   "on-scroll-up": "brightnessctl set +5%"
 },
@@ -106,7 +106,7 @@
 "memory": {
   "interval": 10,
   //"format": "💻 {used:0.1f} GB",
-  "format": "💻 {}%",
+  "format": "<span font='JoyPixels'>⚙</span> {}%",
   "max-length": 15
 },
 
@@ -139,11 +139,11 @@
 "mpd": {
         "format": "{stateIcon}  {artist} - {title} ({elapsedTime:%M:%S}/{totalTime:%M:%S})",
         //"format": "{stateIcon} {consumeIcon}",
-        "format-disconnected": "<span foreground='#DE2F2E'>🚫 Disconnected</span>",
+        "format-disconnected": "<span foreground='#DE2F2E'>🚫 No player is running</span>",
         "interval": 2,
         "state-icons": {
-            "paused": "⏯",
-            "playing": "⏸"
+            "paused": "⏯ Paused:",
+            "playing": "⏸ Playing:"
         },
         "tooltip-format": "MPD (connected)",
         "tooltip-format-disconnected": "MPD (disconnected)"
