--- a/sway/config
+++ b/sway/config
@@ -2,7 +2,9 @@
 
 set $term foot
 
-set $menu bemenu-run -p "Search" -H "40px" --fn "Iosevka Nerd Font 16" --hf="#6a9fb5" --hb="#151515" --nb="#151515" --nf="#d0d0d0" --tb="#151515" --tf="#6a9fb5" --fb="#151515" --ff="#d0d0d0"
+set $menu wofi --show drun --width 800 --allow-images
+
+#set $menu bemenu-run -p "Search" -H "40px" --fn "Iosevka Nerd Font 16" --hf="#6a9fb5" --hb="#151515" --nb="#151515" --nf="#d0d0d0" --tb="#151515" --tf="#6a9fb5" --fb="#151515" --ff="#d0d0d0"
 
 # Home row direction keys, like vim
 set $left h
@@ -182,13 +184,13 @@ input "1267:12596:ASUE140A:00_04F3:3134_Touchpad" {
     bindsym $mod+minus scratchpad show
 
 # Others
-	  bindsym --locked XF86AudioRaiseVolume exec /home/paolo/.config/scripts/volume+
+    bindsym --locked XF86AudioRaiseVolume exec /home/paolo/.config/scripts/volume+
     bindsym --locked XF86AudioLowerVolume exec /home/paolo/.config/scripts/volume-
     bindsym --locked XF86AudioMute exec /home/paolo/.config/scripts/toggle-mute
 
     # Brightness Control
-    bindsym XF86MonBrightnessDown exec brightnessctl set 5%-
-    bindsym XF86MonBrightnessUp exec brightnessctl set +5%
+    bindsym XF86MonBrightnessDown exec brightnessctl set 5%- | exec /home/paolo/.config/scripts/brightness-notification.sh
+    bindsym XF86MonBrightnessUp exec brightnessctl set +5% | exec /home/paolo/.config/scripts/brightness-notification.sh
         
     # https://github.com/haikarainen/light
     # bindsym XF86MonBrightnessUp exec light -A 5    # increase screen brightness
@@ -208,13 +210,14 @@ input "1267:12596:ASUE140A:00_04F3:3134_Touchpad" {
     bindsym Alt+l exec swaylock
         
     # Print Entire Screen
-    bindsym Print exec wayshot -f $HOME/Pictures/capture-$(date +%Y-%m-%d_%H-%m-%s).png
+    # bindsym Print exec grim $(xdg-user-dir PICTURES)/$(date +'screenshot_%F-%T.png')
+    bindsym Print exec grim -o $(swaymsg -t get_outputs | jq -r '.[] | select(.focused) | .name')
+    
+    # Print Region
+    bindsym alt+Print exec slurp | grim -g - $(xdg-user-dir PICTURES)/$(date +'screenshot_%Y-%m-%d-%H%M%S.png')
 
-	  # Print Region
-    bindsym alt+Print exec wayshot -s "$(slurp -f '%x %y %w %h')" -f $HOME/Pictures/capture-$(date +%Y-%m-%d_%H-%m-%s).png
-
-    # Copy to Clipboard
-    bindsym shift+Print exec wayshot --stdout | wl-copy
+    # Capture the specified screen area to clipboard 
+    bindsym shift+Print exec grim -g "$(slurp -d)" - | wl-copy
 
     # Launch Applications
     bindsym alt+f exec nautilus
