--- a/sway/config
+++ b/sway/config
@@ -19,7 +19,7 @@ set $right l
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
 input * {
-	xkb_layout "br, us"
+	xkb_layout "br, us(intl)"
   xkb_options grp:alt_shift_toggle
 }
 
@@ -31,7 +31,7 @@ input "1267:12596:ASUE140A:00_04F3:3134_Touchpad" {
 
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
-	output * bg /home/paolo/wallpapers/grass.png fill
+	output * bg /home/paolo/wallpapers/adwaita-d.jpg fill
 
 	output eDP-1 {
     mode 1920x1080@60Hz
@@ -217,7 +217,9 @@ input "1267:12596:ASUE140A:00_04F3:3134_Touchpad" {
     bindswitch lid:off output eDP-1 enable
 
 # Wayland default floats
+    
     for_window [app_id="(pavucontrol)"] floating enable
+    for_window [app_id="(Steam)"] floating enable
 
 # Idle
   	exec swayidle -w \
