--- a/sway/config
+++ b/sway/config
@@ -233,7 +233,7 @@ input "1267:12596:ASUE140A:00_04F3:3134_Touchpad" {
 
 # Autostart
     exec mako
-    exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+    #exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
 # Gaps
     gaps outer 4
