--- a/sway/config
+++ b/sway/config
@@ -19,241 +19,234 @@ set $right l
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
 input * {
-	xkb_layout "br, us(intl)"
+  xkb_layout "br, us(intl)"
   xkb_options grp:alt_shift_toggle
 }
 
 input "1267:12596:ASUE140A:00_04F3:3134_Touchpad" {
-       tap enabled
+  tap enabled
 }
 
 # Outputs
 
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
-	output * bg /home/paolo/wallpapers/adwaita-d.jpg fill
+output * bg /home/paolo/wallpapers/dark.png fill
 
-	output eDP-1 {
-    mode 1920x1080@60Hz
-    pos 0 0
-  }
-	
-  output HDMI-A-1 {
-    mode 1920x1080@75Hz
-    pos 1920 0
-    transform normal
-    scale 1.0
-    scale_filter nearest
-    adaptive_sync off
-    dpms on
-  }
+output eDP-1 {
+  mode 1920x1080@60Hz
+  pos 0 0
+}
 
-  output DP-3 {
-    mode 1366x768@60Hz
-  }
+output HDMI-A-1 {
+  mode 1920x1080@75Hz
+  pos 1920 0
+  transform normal
+  scale 1.0
+  scale_filter nearest
+  adaptive_sync off
+  dpms on
+}
 
-  workspace 9 output eDP-1
-  workspace 10 output DP-3
+output DP-3 {
+  mode 1366x768@60Hz
+}
 
-  #output eDP-1 {
-      #background ~/Pictures/bestFriend-wallpaper-07-1920x1200.png fill
-      #resolution 1920x1080
-	    #scale 1.4
-      #}
-
+workspace 9 output eDP-1
+workspace 10 output DP-3
 
 # Keybinds
 
 # Use Mod1 for Super. Use Mod1 for Alt.
-	set $mod Mod4
+set $mod Mod4
 
 # Start a terminal
-	bindsym $mod+Return exec $term
- 
+bindsym $mod+Return exec $terminal 
+
 # Kill focused window
- 	bindsym $mod+q kill
- 
+bindsym $mod+q kill 
+
 # Start your launcher
- 	bindsym $mod+d exec $menu
+bindsym $mod+d exec $menu
 
 # Drag floating windows by holding down $mod and left mouse button.
-	# Resize them with right mouse button + $mod.
- 	# Despite the name, also works for non-floating windows.
-	# Change normal to inverse to use left mouse button for resizing and right
-	# mouse button for dragging.
-	floating_modifier $mod normal
- 
+# Resize them with right mouse button + $mod.
+# Despite the name, also works for non-floating windows.
+# Change normal to inverse to use left mouse button for resizing and right
+# mouse button for dragging.
+floating_modifier $mod normal
+
 # Reload the configuration file
-	bindsym $mod+Shift+c reload
- 
+bindsym $mod+Shift+c reload
+
 # Exit sway (logs you out of your Wayland session)
-	bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
+bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
 
 # Moving around
 
 # Move your focus around
-  bindsym $mod+$left focus left
-  bindsym $mod+$down focus down
-  bindsym $mod+$up focus up
-  bindsym $mod+$right focus right
+bindsym $mod+$left focus left
+bindsym $mod+$down focus down
+bindsym $mod+$up focus up
+bindsym $mod+$right focus right
 
 # Move your focus with arrow keys
-  bindsym $mod+Left focus left
-  bindsym $mod+Down focus down
-  bindsym $mod+Up focus up
-  bindsym $mod+Right focus right
+bindsym $mod+Left focus left
+bindsym $mod+Down focus down
+bindsym $mod+Up focus up
+bindsym $mod+Right focus right
 
 # Move the focused window
-  bindsym $mod+Shift+$left move left
-  bindsym $mod+Shift+$down move down
-  bindsym $mod+Shift+$up move up
-  bindsym $mod+Shift+$right move right
+bindsym $mod+Shift+$left move left
+bindsym $mod+Shift+$down move down
+bindsym $mod+Shift+$up move up
+bindsym $mod+Shift+$right move right
 
 # Move the focused window with arrow keys
-  bindsym $mod+Shift+Left move left
-  bindsym $mod+Shift+Down move down
-  bindsym $mod+Shift+Up move up
-  bindsym $mod+Shift+Right move right
+bindsym $mod+Shift+Left move left
+bindsym $mod+Shift+Down move down
+bindsym $mod+Shift+Up move up
+bindsym $mod+Shift+Right move right
 
 # Split Layout
-  bindsym $mod+b splith
-  bindsym $mod+v splitv
+bindsym $mod+b splith
+bindsym $mod+v splitv
 
 # Switch to workspace
-    	bindsym $mod+1 workspace number 1
-    	bindsym $mod+2 workspace number 2
-    	bindsym $mod+3 workspace number 3
-    	bindsym $mod+4 workspace number 4
-    	bindsym $mod+5 workspace number 5
-    	bindsym $mod+6 workspace number 6
-    	bindsym $mod+7 workspace number 7
-    	bindsym $mod+8 workspace number 8
-    	bindsym $mod+9 workspace number 9
-    	bindsym $mod+0 workspace number 10
+bindsym $mod+1 workspace number 1
+bindsym $mod+2 workspace number 2
+bindsym $mod+3 workspace number 3
+bindsym $mod+4 workspace number 4
+bindsym $mod+5 workspace number 5
+bindsym $mod+6 workspace number 6
+bindsym $mod+7 workspace number 7
+bindsym $mod+8 workspace number 8
+bindsym $mod+9 workspace number 9
+bindsym $mod+0 workspace number 10
 
 # Move focused container to workspace
-    	bindsym $mod+Shift+1 move container to workspace number 1
-    	bindsym $mod+Shift+2 move container to workspace number 2
-    	bindsym $mod+Shift+3 move container to workspace number 3
-    	bindsym $mod+Shift+4 move container to workspace number 4
-    	bindsym $mod+Shift+5 move container to workspace number 5
-    	bindsym $mod+Shift+6 move container to workspace number 6
-    	bindsym $mod+Shift+7 move container to workspace number 7
-    	bindsym $mod+Shift+8 move container to workspace number 8
-    	bindsym $mod+Shift+9 move container to workspace number 9
-    	bindsym $mod+Shift+0 move container to workspace number 10
+bindsym $mod+Shift+1 move container to workspace number 1
+bindsym $mod+Shift+2 move container to workspace number 2
+bindsym $mod+Shift+3 move container to workspace number 3
+bindsym $mod+Shift+4 move container to workspace number 4
+bindsym $mod+Shift+5 move container to workspace number 5
+bindsym $mod+Shift+6 move container to workspace number 6
+bindsym $mod+Shift+7 move container to workspace number 7
+bindsym $mod+Shift+8 move container to workspace number 8
+bindsym $mod+Shift+9 move container to workspace number 9
+bindsym $mod+Shift+0 move container to workspace number 10
 
 # Switch Layouts
-    	bindsym $mod+s layout stacking
-    	bindsym $mod+w layout tabbed
-    	bindsym $mod+e layout toggle split
+bindsym $mod+s layout stacking
+bindsym $mod+w layout tabbed
+bindsym $mod+e layout toggle split
 
 # Resizing Containers
-   	bindsym $mod+r mode "resize"
-
-	mode "resize" {
-    	bindsym Left resize shrink width 10px
-    	bindsym Down resize grow height 10px
-    	bindsym Up resize shrink height 10px
-    	bindsym Right resize grow width 10px
+bindsym $mod+r mode "resize"
+mode "resize" {
+  bindsym Left resize shrink width 10px
+  bindsym Down resize grow height 10px
+  bindsym Up resize shrink height 10px
+  bindsym Right resize grow width 10px
 
 # Return to default mode
-    	bindsym Return mode "default"
-    	bindsym Escape mode "default"
-	}
+  bindsym Return mode "default"
+  bindsym Escape mode "default"
+}
 
 # Make the current focus fullscreen
-    	bindsym $mod+f fullscreen
+  bindsym $mod+f fullscreen
 
 # Toggle the current focus between tiling and floating mode
-    	bindsym $mod+Shift+space floating toggle
+  bindsym $mod+Shift+space floating toggle
 
 # Swap focus between the tiling area and the floating area
-    	bindsym $mod+space focus mode_toggle
+  bindsym $mod+space focus mode_toggle
 
 # Move focus to the parent container
-    	bindsym $mod+a focus parent
+  bindsym $mod+a focus parent
 
 # Scratchpad
 
 # Sway has a "scratchpad", which is a bag of holding for windows.
 # You can send windows there and get them back later.
 # Move the currently focused window to the scratchpad
-    bindsym $mod+Shift+minus move scratchpad
+bindsym $mod+Shift+minus move scratchpad
 
 # Show the next scratchpad window or hide the focused scratchpad window.
 # If there are multiple scratchpad windows, this command cycles through them.
-    bindsym $mod+minus scratchpad show
+bindsym $mod+minus scratchpad show
 
-    bindsym --locked XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5%
-    bindsym --locked XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5%
-    bindsym --locked XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
+# Media Keys
+bindsym --locked XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5%
+bindsym --locked XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5%
+bindsym --locked XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
 
-    bindsym XF86MonBrightnessDown exec brightnessctl set 5%-
-    bindsym XF86MonBrightnessUp exec brightnessctl set +5%
-        
-    bindsym XF86AudioPlay  exec "mpc toggle"
-    bindsym XF86AudioStop  exec "mpc stop"
-    bindsym XF86AudioNext  exec "mpc next"
-    bindsym XF86AudioPrev  exec "mpc prev"
-    bindsym XF86AudioPause exec "mpc pause"
-        
-    bindsym Print exec $grimshot --notify save screen
-    bindsym Ctrl+Print exec $grimshot --notify copy screen
-    bindsym Shift+Print exec $grimshot --notify save area
-    bindsym Ctrl+Shift+Print exec $grimshot --notify copy area
-    
-    bindsym Alt+l exec swaylock    
+bindsym XF86MonBrightnessDown exec brightnessctl set 5%-
+bindsym XF86MonBrightnessUp exec brightnessctl set +5%
 
-    bindsym alt+f exec nautilus
-    bindsym alt+b exec firefox
-    bindsym alt+m exec foot -e ncmpcpp
+bindsym XF86AudioPlay  exec "mpc toggle"
+bindsym XF86AudioStop  exec "mpc stop"
+bindsym XF86AudioNext  exec "mpc next"
+bindsym XF86AudioPrev  exec "mpc prev"
+bindsym XF86AudioPause exec "mpc pause"
 
-    # Reload Waybar
-    bindsym $mod+p exec killall -SIGUSR1 waybar
+bindsym Print exec $grimshot --notify save screen
+bindsym Ctrl+Print exec $grimshot --notify copy screen
+bindsym Shift+Print exec $grimshot --notify save area
+bindsym Ctrl+Shift+Print exec $grimshot --notify copy area
 
-    # Disable laptop's display when closed
-    bindswitch lid:on output eDP-1 disable
-    bindswitch lid:off output eDP-1 enable
+bindsym Alt+l exec swaylock    
+
+bindsym alt+f exec nautilus
+bindsym alt+b exec firefox
+bindsym alt+m exec foot -e ncmpcpp
+
+# Reload Waybar
+bindsym $mod+p exec killall -SIGUSR1 waybar
+
+# Disable laptop's display when closed
+bindswitch lid:on output eDP-1 disable
+bindswitch lid:off output eDP-1 enable
 
 # Wayland default floats
-    
-    for_window [app_id="(pavucontrol)"] floating enable
-    for_window [app_id="(Steam)"] floating enable
+for_window [app_id="(pavucontrol)"] floating enable
+for_window [app_id="(Steam)"] floating enable
 
 # Idle
-  	exec swayidle -w \
-        timeout 900 'swaylock -f' \
-        timeout 900 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
-        before-sleep 'swaylock -f'
+exec swayidle -w \
+timeout 900 'swaylock -f' \
+timeout 900 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
+before-sleep 'swaylock -f'
 
 # This will lock your screen after 900 seconds of inactivity, then turn off
 # your displays after another 900 seconds, and turn your screens back on when
 # resumed. It will also lock your screen before your computer goes to sleep.
 
 # Autostart
-    exec mako
-    #exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec mako
+#exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+seat seat0 xcursor_theme Volantes 32
 
 # Gaps
-    gaps outer 4
-    gaps inner 4
+gaps outer 4
+gaps inner 4
 
 # Titlebars
-    font pango:Iosevka Nerd Font Regular 14
-    default_border pixel 2
-    set $bg #151515
-    set $bod_f #00A7EF
-    set $bod_u #151515
-    set $text #d2d2d2
-    client.focused   $bod_f $bg $text $bod_f $bod_f
-    client.unfocused $bod_u $bg $text $bod_u $bod_u
-    client.focused_inactive $bod_u $bg $text $bod_u $bod_u
+font pango:Iosevka Nerd Font Regular 14
+default_border pixel 2
+set $bg #151515
+set $bod_f #00A7EF
+set $bod_u #151515
+set $text #d2d2d2
+client.focused   $bod_f $bg $text $bod_f $bod_f
+client.unfocused $bod_u $bg $text $bod_u $bod_u
+client.focused_inactive $bod_u $bg $text $bod_u $bod_u
 
 # Status Bar:
 # Read `man 5 sway-bar` for more information about this section.
-    bar {
-        swaybar_command waybar
-    }
+bar {
+  swaybar_command waybar
+}
 
 include /etc/sway/config.d/*
