--- a/sway/config
+++ b/sway/config
@@ -18,8 +18,13 @@ set $right l
 
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
-input * {
+input "1:1:AT_Translated_Set_2_keyboard" {
   xkb_layout "br, us(intl)"
+  xkb_options grp:alt_shift_toggle
+}
+
+input "9610:73:BY_Tech_Gaming_Keyboard" {
+  xkb_layout "us(intl), br"
   xkb_options grp:alt_shift_toggle
 }
 
@@ -31,7 +36,7 @@ input "1267:12596:ASUE140A:00_04F3:3134_Touchpad" {
 
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
-output * bg /home/paolo/wallpapers/dark.png fill
+output * bg /home/paolo/wallpapers/anime.png fill
 
 output eDP-1 {
   mode 1920x1080@60Hz
