--- a/sway/config
+++ b/sway/config
@@ -2,7 +2,7 @@
 
 set $term foot
 
-set $menu wofi --show drun --prompt Search --width 800 --columns 2 --allow-images
+set $menu wofi --show drun --prompt Search --width 50% --columns 4 --allow-images --style=$HOME/.config/wofi/launcher.css
 
 set $grimshot ~/.config/scripts/grimshot.sh
 
@@ -36,7 +36,7 @@ input "1267:12596:ASUE140A:00_04F3:3134_Touchpad" {
 
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
-output * bg /home/paolo/wallpapers/anime.png fill
+output * bg /home/paolo/wallpapers/dark.png fill
 
 output eDP-1 {
   mode 1920x1080@60Hz
