add drag and drop with dragon

--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -474,6 +474,9 @@ map yd yank dir
 map yn yank name
 map y. yank name_without_extension
 
+# Drag and Drop
+map <C-d> shell dragon -a -x %p
+
 # Filesystem Operations
 map =  chmod
 
