--- a/sway/config
+++ b/sway/config
@@ -36,7 +36,7 @@ input "1267:12596:ASUE140A:00_04F3:3134_Touchpad" {
 
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
-output * bg /home/paolo/wallpapers/dark.png fill
+output * bg /home/paolo/wallpapers/anime.png fill
 
 output eDP-1 {
   mode 1920x1080@60Hz
@@ -211,15 +211,14 @@ bindsym Alt+l exec swaylock
 
 bindsym $mod+x exec $HOME/.config/scripts/wofi-power.sh
 bindsym alt+f exec foot -e ranger
-bindsym alt+b exec firefox-developer-edition
-bindsym alt+m exec foot -e ncmpcpp
+bindsym alt+b exec qutebrowser
 
 # Reload Waybar
 bindsym $mod+p exec killall -SIGUSR1 waybar
 
 # Disable laptop's display when closed
-bindswitch lid:on output eDP-1 disable
-bindswitch lid:off output eDP-1 enable
+bindswitch --reload --locked lid:on output eDP-1 disable
+bindswitch --reload --locked lid:off output eDP-1 enable
 
 # Wayland default floats
 for_window [window_role = "pop-up"] floating enable
